--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,39 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <title>Contact</title>
+    <title>Plotlist - Listing HTML5 Template</title>
 
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 
-  <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="css/fontawesome.css">
-  <link rel="stylesheet" href="css/plot-listing.css">
-  <link rel="stylesheet" href="css/animated.css">
-  <link rel="stylesheet" href="css/owl.css">
+    <!-- Additional CSS Files -->
+    <link rel="stylesheet" href="assets/css/fontawesome.css">
+    <link rel="stylesheet" href="assets/css/templatemo-plot-listing.css">
+    <link rel="stylesheet" href="assets/css/animated.css">
+    <link rel="stylesheet" href="assets/css/owl.css">
+<!--
 
-</head>
+TemplateMo 564 Plot Listing
+
+https://templatemo.com/tm-564-plot-listing
+
+-->
+  </head>
 
 <body>
 
+  <!-- ***** Preloader Start ***** -->
   <div id="js-preloader" class="js-preloader">
     <div class="preloader-inner">
       <span class="dot"></span>
@@ -37,30 +44,36 @@
       </div>
     </div>
   </div>
+  <!-- ***** Preloader End ***** -->
 
+  <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky wow slideInDown" data-wow-duration="0.75s" data-wow-delay="0s">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <nav class="main-nav">
-            <a href="index.html" class="logo"></a>
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="category.html">Category</a></li>
               <li><a href="listing.html">Listing</a></li>
-              <li><a href="contact.html" class="active">Contact Us</a></li>
-              <li>
-                <div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div>
-              </li>
-            </ul>
+              <li><a href="contact.html" class="active">Contact Us</a></li> 
+              <li><div class="main-white-button"><a href="#"><i class="fa fa-plus"></i> Add Your Listing</a></div></li> 
+            </ul>        
             <a class='menu-trigger'>
-              <span>Menu</span>
+                <span>Menu</span>
             </a>
+            <!-- ***** Menu End ***** -->
           </nav>
         </div>
       </div>
     </div>
   </header>
+  <!-- ***** Header Area End ***** -->
 
   <div class="page-heading">
     <div class="container">
@@ -83,9 +96,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div id="map">
-                  <iframe
-                    src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                    width="100%" height="650px" frameborder="0" style="border:0" allowfullscreen></iframe>
+                  <iframe src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed" width="100%" height="650px" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="col-lg-6 align-self-center">
@@ -98,14 +109,12 @@
                     </div>
                     <div class="col-lg-6">
                       <fieldset>
-                        <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on"
-                          required>
+                        <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
-                          required="">
+                        <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email" required="">
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
@@ -119,14 +128,12 @@
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Message"
-                          required=""></textarea>
+                        <textarea name="message" type="text" class="form-control" id="message" placeholder="Message" required=""></textarea>  
                       </fieldset>
                     </div>
                     <div class="col-lg-12">
                       <fieldset>
-                        <button type="submit" id="form-submit" class="main-button "><i class="fa fa-paper-plane"></i>
-                          Send Message</button>
+                        <button type="submit" id="form-submit" class="main-button "><i class="fa fa-paper-plane"></i> Send Message</button>
                       </fieldset>
                     </div>
                   </div>
@@ -145,11 +152,9 @@
         <div class="col-lg-4">
           <div class="about">
             <div class="logo">
-              <img src="images/black-logo.png" alt="Plot Listing Template">
+              <img src="assets/images/black-logo.png" alt="Plot Listing Template">
             </div>
-            <p>If you consider that <a rel="nofollow" href="https://templatemo.com/tm-564-plot-listing"
-                target="_parent">Plot Listing template</a> is useful for your website, please <a rel="nofollow"
-                href="https://www.paypal.me/templatemo" target="_blank">support us</a> a little via PayPal.</p>
+            <p>If you consider that <a rel="nofollow" href="https://templatemo.com/tm-564-plot-listing" target="_parent">Plot Listing template</a> is useful for your website, please <a rel="nofollow" href="https://www.paypal.me/templatemo" target="_blank">support us</a> a little via PayPal.</p>
           </div>
         </div>
         <div class="col-lg-4">
@@ -192,8 +197,8 @@
         <div class="col-lg-12">
           <div class="sub-footer">
             <p>Copyright © 2021 Plot Listing Co., Ltd. All Rights Reserved.
-              <br>
-              Design: <a rel="nofollow" href="https://templatemo.com" title="CSS Templates">TemplateMo</a></p>
+            <br>
+			Design: <a rel="nofollow" href="https://templatemo.com" title="CSS Templates">TemplateMo</a></p>
           </div>
         </div>
       </div>
@@ -204,10 +209,10 @@
   <!-- Scripts -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="js/owl-carousel.js"></script>
-  <script src="js/animation.js"></script>
-  <script src="js/imagesloaded.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="assets/js/owl-carousel.js"></script>
+  <script src="assets/js/animation.js"></script>
+  <script src="assets/js/imagesloaded.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 
